# RCP-Target

./: CMakeLists.txt  GithubRelease.sh  README.md  library.json  piogenversion.py  piogenversion.sh  pioprebuild.py
cmake/: gen_version.cmake
src/: RCPTarget.cpp  procedures.cpp  test.cpp
src/RCP_Target/: LRIRingBuf.h  RCP_Target.h  VERSION.h  procedures.h  test.h
test/: fixtures.h  test.cpp
